ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress

metadata:
  name: amnodejs-ingress
  namespace: default
  annotations:
     kubernetes.io/ingress.global-static-ip-name: amnodejs-ip
     networking.gke.io/managed-certificates: amnodejs.cf-certificate

spec:
    backend:
      serviceName: amnodejs-svc
      servicePort: 80
